modules/features/dgu_organogram/css/organogram.css
/* ... */
.organogram-help {
    text-align: center;
}
.organogram-help div{
    display: inline-block;
    padding: 30px;
    width: 20%;
    text-align: left;
    background-color: #fff;
    margin-left: 70px;
    margin-right: 70px;
}

form#ckan-publisher-form legend {
    display: none;
}

form#ckan-publisher-form fieldset {
    padding: 0;
    background: none;
}
form#ckan-publisher-form #edit-submit,  form#ckan-publisher-form #edit-cancel {
    display: none;
}

.field-name-field-organogram table.table {
    margin: 0 auto;
}

.field-name-field-organogram fieldset {
    border: none;
    box-shadow: none;
}

.field-name-field-organogram .panel-body {
    padding: 0;
}

.field-name-field-organogram .outstanding {
    color: #f00;
}

.form-type-managed-file .form-type-select,
.form-type-managed-file {
    display: none;
}



.field-name-field-organogram .input-group .form-control {
    width: inherit;
}

.field-name-field-organogram .input-group input.form-file {
    box-sizing: border-box;
    max-width: 100%;
    width: 100%;
    /*
    background-color: #efefef;
    border: none;
    box-shadow: none;
    */
    display: block;
    margin-bottom: 10px;
}

.field-name-field-organogram .btn-cancel {
    height: 35px;
    margin-top: 3px;
    margin-left: 5px;
}

.sign-off .checkbox input {
    margin: auto !important;
    float: none !important;
    vertical-align: middle;
}

div.chart {
    position: relative;
    width: 100%;
}

.organogram-preview-content {
    padding-top: 32px;
}

#edit-field-organogram-und-ajax-wrapper .tabledrag-toggle-weight{
    display: none;
}

canvas {
    cursor:move;
}

div.infovis
{
    padding-top:32px;
    bottom:0;
    height:50%;
    left:0;
    margin:auto;
    overflow:hidden;
    width:100%;
}
.infobox,
#infobox
{
    -moz-box-shadow: 0 5px 24px #888888;
    box-shadow: 0 5px 24px #888888;
    -webkit-box-shadow: 0 5px 24px #888888;
    background-color:#FFFFFF;
    border:1px solid #DDDDDD;
    color:#333333;
    display:none;
    height:auto;
    margin-bottom:20px;
    overflow-x:hidden;
    overflow-y:auto;
    padding:0 0 5px;
    position:absolute;
    right:25px;
    top: 25px;
    width: 290px;
    z-index:999;
}
body.IE8 div.infobox,
body.IE8 div#infobox {
    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=8, Direction=225, Color='#777777')";
}
body.IE7 div.infobox,
body.IE7 div#infobox {
    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=8, Direction=225, Color='#777777');
}
.infobox .ui-accordion .ui-accordion-content,
.infobox div.panel div.content,
#infobox .ui-accordion .ui-accordion-content,
#infobox div.panel div.content {
    border-top:0 none;
    margin-bottom:2px;
    margin-top:-2px;
    overflow:auto;
    padding:0 !important;
    position:relative;
    top:1px;
}

.infobox .ui-accordion .ui-accordion-header,
#infobox .ui-accordion .ui-accordion-header
{
    cursor:pointer;
    margin-top:3px !important;
    position:relative;
}

.infobox .ui-accordion-header-icon,
#infobox .ui-accordion-header-icon {
    display: none;
}

/* UI Overrides
 Infobox */
.infobox .ui-accordion .ui-accordion-header a,
#infobox .ui-accordion .ui-accordion-header a
{
    font-size:0.8em !important;
    padding:0.3em 0.5em !important;
    text-align:right !important;
    color: #fff;
}

.infobox .ui-accordion-content,
#infobox .ui-accordion-content
{
    overflow:auto;
    padding-bottom:0 !important;
    padding-top:0 !important;
}

.infobox h1,
#infobox h1
{
    border-bottom:1px solid #CCCCCC;
    font-size:14px;
    margin-bottom:0;
    margin-left:0;
    margin-top:0;
    padding:10px 30px;
    text-align:center;
    line-height: 20px;
    font-weight: bold;
}

.infobox h2,
#infobox h2
{
    color:#999999;
    font-size:0.9em;
    font-weight:normal;
    margin:0;
    padding:0;
}

.infobox h3,
#infobox h3
{
    background: #8bc658;
    font-size:16px !important;
    border: none;
    border-radius: 0;
}

.infobox hr,
#infobox hr
{
    border-color:#-moz-use-text-color #-moz-use-text-color #EEEEEE;
    border-style:none none double;
    border-width:medium medium 3px;
    padding-top:10px;
}

.infobox p a.expand,
#infobox p a.expand
{
    color:#333333;
    font-weight:bold;
    text-decoration:none;
}

.infobox p a.expand:hover,
#infobox p a.expand:hover
{
    color:#3970AE;
    font-weight:bold;
}

.infobox p.comment,
#infobox p.comment
{
    padding-bottom: 0;
}

.infobox p.comment span,
#infobox p.comment span
{
    font-style:normal;
    margin-bottom: 0px;
}

.infobox p.comment span.text,
.infobox p.notes span.text,
#infobox p.comment span.text,
#infobox p.notes span.text {
    background: none repeat scroll 0 0 transparent !important;
    border: medium none !important;
    color: #333333;
    display: block;
    font-family: Georgia !important;
    font-size: 11px;
    font-weight: normal;
    margin: 0;
    max-height: 75px;
    overflow-y: auto;
    overflow-x: hidden;
    padding: 3px 0;
    height:expression( this.scrollHeight > 74 ? "75px" : "auto" );
}

.infobox p.type,
#infobox p.type
{
    text-transform:capitalize;
}

.infobox ul.members,
#infobox ul.members
{
    border-bottom:1px solid #EEEEEE;
    display:none;
    font-family:georgia;
    list-style-type:none;
    margin:0;
    max-height:300px;
    overflow-y:auto;
    padding:5px 0;
    text-align:left;
}

.infobox ul.members li,
#infobox ul.members li
{
    padding-bottom:15px;
}

.infobox ul.members li span.memberType,
#infobox ul.members li span.memberType
{
    color:#999999;
    display:block;
    font-style:italic;
    padding-left:15px;
    padding-top:1px;
}

.infobox ul.members li span.name,
#infobox ul.members li span.name
{
    display:block;
    font-weight:bold;
}

.infobox ul.members li span.salary,
#infobox ul.members li span.salary
{
    float:right;
    margin-right:10px;
    margin-top:-20px;
}
/* ... */

